# burrito

./: Cargo.toml  README.md  plan.md  shell.nix  whiteboard.json
src/: app.rs  canvas.rs  main.rs  types.rs
src/gui/: context.rs  mod.rs  renderer.rs  widget.rs
src/plot/: camera.rs  canvas.rs  config.rs  data.rs  geometry.rs  gpu_mesh.rs  mesh.rs  mod.rs  plot2d.rs  renderer.rs  vertex.rs
