[package]
name = "burrito"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "29.0"
winit = { version = "0.30", default-features = false, features = ["wayland", "wayland-dlopen", "rwh_06"] }
glam = "0.28"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"
glyphon = "0.11.0"